# desktop_tray_poc

./: test-server.js  tree.txt
.github/workflows/: build.yml
plaid-server/: .env  package-lock.json  package.json  tsconfig.json
plaid-server/src/: app.module.ts  main.ts
plaid-server/src/database/: database.module.ts
plaid-server/src/plaid/: plaid.controller.ts  plaid.module.ts  plaid.service.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json  windows-resources.json
src-tauri/resources/postgres-linux/lib/: libecpg.so.6.15  libecpg_compat.so.3.15  libossp-uuid.so.16  libpgtypes.so.3.15  libpq.so.5.15  libxml2.so.2  libxslt.so.1  libz.so.1
src-tauri/resources/postgres-linux/lib/postgresql/pgxs/src/: Makefile.global
src-tauri/resources/postgres-linux/lib/postgresql/pgxs/src/test/isolation/: isolationtester  pg_isolation_regress
src-tauri/resources/postgres-linux/lib/postgresql/pgxs/src/test/regress/: pg_regress
src-tauri/src/: db.rs  lib.rs  main.rs  upload.rs
src-tauri/src/commands/: plaid.rs
src-tauri/src/orchestrator/: backend.rs  embedded_postgres.rs  mod.rs  progress.rs
src/components/: BankDashboard.vue  FileSelector.vue  NetworkStatus.vue  UploadHistorySection.vue
