[package]
name = "fluxbooks-desktop-tray"
version = "0.1.1"
description = "FluxBooks Desktop Tray App"
authors = []
edition = "2021"

[lib]
name = "fluxbooks_desktop_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "linux-libxdo"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["multipart", "stream", "rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
once_cell = "1"
pg_embed = { version = "0.7", default-features = false, features = [
    "rt_tokio_migrate",   # async runtime via tokio
] }
